<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/text_view_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_marginBottom="@dimen/activity_vertical_margin"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:layout_height="wrap_content"
        android:text="@string/button_1_spotify_streamer"
        android:id="@+id/button"
        android:tag="Button1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:onClick="clickButtons"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:layout_height="wrap_content"
        android:text="@string/button_2_football_scores"
        android:id="@+id/button2"
        android:tag="Button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:onClick="clickButtons"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:layout_height="wrap_content"
        android:text="@string/button_3_library_app"
        android:id="@+id/button3"
        android:tag="Button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:onClick="clickButtons"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:layout_height="wrap_content"
        android:text="@string/button_4_build_it_bigge"
        android:id="@+id/button4"
        android:tag="Button4"
        android:layout_below="@+id/button3"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:onClick="clickButtons"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:layout_height="wrap_content"
        android:text="@string/button_5_XYZ_reader"
        android:id="@+id/button5"
        android:tag="Button5"
        android:layout_below="@+id/button4"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent"
        android:onClick="clickButtons"/>

    <Button
        android:layout_width="@dimen/width_button_principal"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/button_6_Capstone"
        android:id="@+id/button6"
        android:tag="Button6"
        android:layout_below="@+id/button5"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/accent_2"
        android:onClick="clickButtons"/>

</RelativeLayout>
